# nationguessr-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
data/: data.db
data/dev/: names.json
data/prod/: country_names.json
data/test/: test_facts.json
scripts/: cdk.py  webhook.py
sql/: create.sql
src/: client.rs  dto.rs  error.rs  fsm.py  fsm.rs  handlers.py  lambda.py  main.py  main.rs  models.py  requirements.txt  state.py  utils.py  vars.py
src/assets/data/: countries.csv
src/models/: __init__.py
src/models/facts/: __init__.py  base.py  json.py
src/nationguessr/: settings.py
src/nationguessr/app/: editing.py  handlers.py  settings.py
src/nationguessr/data/: country.py  game.py  models.py
src/nationguessr/service/: game.py  image.py  telegram.py  utils.py
src/nationguessr/service/fsm/: storage.py
src/tests/: game_test.py  util_test.py
tests/: utils_test.py
