[package]
name = "nationguessr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.55"
aws-sdk-dynamodb = "^0.25"
tokio = { version = "^1.0", features = ["full"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
lambda_runtime = "^0.7"
lambda_http = "^0.7"
tracing-subscriber = "^0.3"
error-stack = "^0.3"

[profile.release]
strip = true
opt-level = "s"
lto = true

