[tool.poetry]
name = "nationguessr"
version = "0.1.0"
description = "Hi there, I'm Nationguessr, your ultimate quiz-bot on Telegram! Are you a geography enthusiast or just looking to have some fun? Well, I've got you covered! With me, you get to test your knowledge about countries from all over the world by trying to guess them based on random facts about their history, culture, geography, and much more!"
authors = ["Anton Kozyriev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
aiofiles = "^23.2.1"
pydantic-settings = "^2.2.1"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.3.0"
ruff = "^0.1.5"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.scripts]
optional = true

[tool.poetry.group.scripts.dependencies]
requests = "^2.31.0"
click = "^8.1.7"

[tool.poetry.group.cdk]
optional = true

[tool.poetry.group.cdk.dependencies]
aws-cdk-lib = "^2.140.0"
constructs = "^10.3.0"

[tool.black]
line-length = 88
target_version = ['py310']
preview = true

[tool.ruff]
select = ["A", "B", "C4", "E", "EM", "F", "I001", "Q", "UP"]
ignore = ["E501", "EM101"]

[tool.pytest.ini_options]
minversion = 7.4
addopts = "-ra -q"
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
